fixed css valign issue

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -350,7 +350,7 @@ footer {
     height: 100vh;
     min-height: 500px;
     max-height: 1080px;
-    background: url(../images/background.jpg);
+    background: url(/images/background.jpg);
     background-size: cover;
     padding: 15px;
     overflow: hidden;
@@ -538,7 +538,6 @@ footer {
 .vtimeline-point {
     position: relative;
     display: block;
-    vertical-align: top;
     margin-bottom: 30px;
 }
 
